B-68612 Tech Debt: FDA: replace Arrays.asList() by List.of() in packages dist-foreign-domain, dist-foreign-integration, dist-foreign-service