@@ -8,8 +8,8 @@ import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 /**
  * Verifies {@link UsageBatchUtils}.
@@ -42,7 +42,7 @@ public class UsageBatchUtilsGetFiscalYearTest {
 
     @Parameterized.Parameters
     public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
+        return List.of(new Object[][]{
             {StringUtils.EMPTY, null},
             {FY_2017, LocalDate.of(2017, 1, 1)},
             {FY_2017, LocalDate.of(2017, 2, 1)},
