@@ -10,8 +10,8 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 /**
  * Verifies {@link Object#equals(Object)}, {@link Object#hashCode()},
@@ -45,7 +45,7 @@ public class DomainVerifierTest {
             {ExternalUsageMessage.class},
             {ExternalUsageWrapper.class}
         };
-        return Arrays.asList(testData);
+        return List.of(testData);
     }
 
     @Test
