@@ -7,7 +7,7 @@ import com.copyright.rup.dist.common.domain.job.JobStatusEnum;
 
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Verifies {@link JobInfoUtils}.
@@ -24,7 +24,7 @@ public class JobInfoUtilsTest {
     public void testMergeJobResultsSkipped() {
         JobInfo finishedInfo = new JobInfo(JobStatusEnum.SKIPPED, "ProductFamily=FAS, Reason=There are no usages");
         JobInfo skippedInfo = new JobInfo(JobStatusEnum.SKIPPED, "ProductFamily=FAS2, Reason=There are no usages");
-        JobInfo resultInfo = JobInfoUtils.mergeJobResults(Arrays.asList(finishedInfo, skippedInfo));
+        JobInfo resultInfo = JobInfoUtils.mergeJobResults(List.of(finishedInfo, skippedInfo));
         assertEquals(JobStatusEnum.SKIPPED, resultInfo.getStatus());
         assertEquals("ProductFamily=FAS, Reason=There are no usages; ProductFamily=FAS2, Reason=There are no usages",
             resultInfo.getResult());
@@ -34,7 +34,7 @@ public class JobInfoUtilsTest {
     public void testMergeJobResultsFinished() {
         JobInfo finishedInfo = new JobInfo(JobStatusEnum.FINISHED, "ProductFamily=FAS, UsagesCount=2");
         JobInfo skippedInfo = new JobInfo(JobStatusEnum.SKIPPED, "ProductFamily=FAS2, Reason=There are no usages");
-        JobInfo resultInfo = JobInfoUtils.mergeJobResults(Arrays.asList(finishedInfo, skippedInfo));
+        JobInfo resultInfo = JobInfoUtils.mergeJobResults(List.of(finishedInfo, skippedInfo));
         assertEquals(JobStatusEnum.FINISHED, resultInfo.getStatus());
         assertEquals("ProductFamily=FAS, UsagesCount=2; ProductFamily=FAS2, Reason=There are no usages",
             resultInfo.getResult());
