@@ -9,10 +9,10 @@ import com.copyright.rup.dist.foreign.domain.UsageStatusEnum;
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.databind.ObjectMapper;
+
 import org.junit.Test;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -37,7 +37,7 @@ public class CommonUdmUsageDeserializerTest {
     }
 
     private List<UdmUsage> buildUdmUsages() {
-        return Arrays.asList(
+        return List.of(
             buildUdmUsage("acd033da-cba1-4e85-adc9-0bcd00687d9d", 122825347L, "0927-7765", "0927-7761",
                 "Colloids and surfaces", "Colloids and surfaces. C, Biointerfaces"),
             buildUdmUsage("955d8192-c80d-4be1-963e-12616f8e9c41", 100002555L, "2227-7589", "0927-7762",
