@@ -20,7 +20,6 @@ import org.springframework.test.context.TestExecutionListeners;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -66,7 +65,7 @@ public class RefreshScenarioTest {
             .withScenario("e6e2fe6c-4c47-4ca1-bf32-591af4c13060")
             .expectPreferences("prm/preferences_response.json", RIGHTHOLDER_ID_1)
             .expectRollups("prm/fas_rollups_response.json", RIGHTHOLDER_ID_1)
-            .expectUsages(Arrays.asList(
+            .expectUsages(List.of(
                 buildUsage("0e49fd89-f094-4023-b729-afe240272ebe", 1000024497L, 1000024497L, "435.008", "2283.792",
                     FAS_PRODUCT_FAMILY, 122235139L, "3000.00", "2718.8000000000", "0.16000", true, true),
                 buildUsage("b1f0b236-3ae9-4a60-9fab-61db84199dss", 7000429266L, 1000009997L, "2871.0528", "6100.9872",
@@ -94,7 +93,7 @@ public class RefreshScenarioTest {
             .expectPreferences("prm/not_found_response.json",
                 "a5989f7c-fc6f-4e8c-88d4-2fe7bcce8d1f", RIGHTHOLDER_ID_3, RIGHTHOLDER_ID_2)
             .expectRollups("prm/cla_rollups_response.json", RIGHTHOLDER_ID_3, RIGHTHOLDER_ID_2)
-            .expectUsages(Arrays.asList(buildUsage("007aff49-831c-46ab-9528-2e043f7564e9", 2000073957L,
+            .expectUsages(List.of(buildUsage("007aff49-831c-46ab-9528-2e043f7564e9", 2000073957L,
                 2000073957L, "1450.0256", "3081.3044", FAS2_PRODUCT_FAMILY, 243904752L, "5000.00", "4531.3300000000",
                 SERVICE_FEE_32, false, false),
                 buildUsage("3c3a3329-d64c-45a9-962c-f247e4bbf3b6", 2000139286L, 2000017000L, "509.322", "4583.898",
